--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,6 +40,9 @@ jobs:
           node-version: 24
           cache: "npm"
 
+      - name: "Install project dependencies"
+        run: npm install
+
       - name: "Build website"
         run: npm run build
 
